Closed Bug 292348 Opened 21 years ago Closed 21 years ago

NewEmbededPluginStream misspelled

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: pythonesque+bugzilla)

References

()

Details

(Whiteboard: [good first bug])

Attachments

(1 obsolete file)

in fact, there are other misspellings of embedded too: http://lxr.mozilla.org/seamonkey/search?string=embeded
Whiteboard: [good first bug]
Attached patch Proposed Patch (obsolete) — — Splinter Review
I opted for the general solution and replaced all the cases linked to. I'm a bit concerned about this one, actually, as some of the documentation still uses 'embeded'. Will this patch break any existing plugins, though it compiles without issue?
Attachment #184870 - Flags: review?(brendan)
This could break a plugin if one of the changed names is in the ABI. Cc'ing jst to figure out whether that's the case. /be
Comment on attachment 184870 [details] [diff] [review] Proposed Patch jst should review, he's heir apparent for the module. I'll sr. /be
Attachment #184870 - Flags: superreview?(brendan)
Attachment #184870 - Flags: review?(jst)
Attachment #184870 - Flags: review?(brendan)
Comment on attachment 184870 [details] [diff] [review] Proposed Patch r+sr=jst (brendan, feel free to sr too if you really want to).
Attachment #184870 - Flags: superreview?(brendan)
Attachment #184870 - Flags: superreview+
Attachment #184870 - Flags: review?(jst)
Attachment #184870 - Flags: review+
Attachment #184870 - Flags: approval1.8b3?
Attachment #184870 - Flags: approval1.8b3? → approval1.8b3+
Assignee: nobody → pythonesque+bugzilla
Comment on attachment 184870 [details] [diff] [review] Proposed Patch mozilla/layout/generic/nsSpaceManager.cpp 3.65 mozilla/modules/plugin/base/public/nsIPluginHost.idl 1.6 mozilla/modules/plugin/base/src/nsPluginHostImpl.cpp 1.525 mozilla/modules/plugin/base/src/nsPluginHostImpl.h 1.99 mozilla/widget/src/gtkxtbin/gtk2xtbin.c 1.11 mozilla/widget/src/gtkxtbin/gtk2xtbin.h 1.5 mozilla/widget/src/gtkxtbin/gtkxtbin.c 1.16 mozilla/widget/src/xlibxtbin/xlibxtbin.cpp 1.5 mozilla/editor/ui/composer/content/publishprefs.js 1.16 mozilla/layout/generic/nsObjectFrame.cpp 1.506
Attachment #184870 - Attachment is obsolete: true
LXR told me that this was fixed...
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: