Bug 292348 NewEmbededPluginStream misspelled patch by pythonesque+bugzilla@gmail.com r=jst sr=jst a=asa